Fix accordion expand/collapse color

--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -242,16 +242,13 @@ input[type="range"] {
     font-size: var(--bs-body-font-size);
 }
 
-[dir] .accordion-button.collapsed::after {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%238F95A0'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-}
-
-[dir] .accordion-button:not(.collapsed)::after {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%238F95A0'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-}
-
 [dir] .accordion-button:focus {
     box-shadow: 0 1px var(--bs-border-color) !important;
+}
+
+.accordion {
+    --bs-accordion-btn-icon: var(--accordion-btn-icon);
+    --bs-accordion-btn-active-icon: var(--accordion-btn-icon);
 }
 
 .wt-site-title {
